--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,5 +34,5 @@ steps:
     configuration: '$(buildConfiguration)'
 - task: DotNetCoreCLI@2
   inputs:
-    command: 'build'
-    projects: '**/*.sln'
+    command: 'publish'
+    publishWebProjects: true
